[gd_scene load_steps=20 format=2]

[ext_resource path="res://Scripts/MadLibs.gd" type="Script" id=1]
[ext_resource path="res://Assets/Buttons/Spritesheet_UI_Paper.png" type="Texture" id=2]
[ext_resource path="res://Assets/Buttons/UI_Papernote_Spritesheet.png" type="Texture" id=3]
[ext_resource path="res://Assets/gui_themes/next_buttons.tres" type="Theme" id=4]
[ext_resource path="res://Assets/Fonts/Roboto-Regular.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=5]
size = 50
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 2 )
region_rect = Rect2( 432, 37, 64, 22 )
expand_margin_left = 200.0
expand_margin_right = 200.0
expand_margin_top = 15.0
expand_margin_bottom = 50.0

[sub_resource type="Theme" id=7]
Label/colors/font_color = Color( 0, 0, 0, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 1 )
Label/colors/font_outline_modulate = Color( 0, 0, 0, 1 )
Label/constants/line_spacing = 0
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 0
Label/constants/shadow_offset_y = 0
Label/fonts/font = SubResource( 5 )
Label/styles/normal = SubResource( 6 )

[sub_resource type="DynamicFont" id=8]
size = 50
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 3 )
region_rect = Rect2( 608, 265, 64, 13 )
expand_margin_left = 30.0
expand_margin_right = 30.0

[sub_resource type="Theme" id=3]
LineEdit/colors/clear_button_color = Color( 0, 0, 0, 1 )
LineEdit/colors/clear_button_color_pressed = Color( 0, 0, 0, 1 )
LineEdit/colors/cursor_color = Color( 0, 0, 0, 1 )
LineEdit/colors/font_color = Color( 0, 0, 0, 1 )
LineEdit/colors/font_color_selected = Color( 0, 0, 0, 1 )
LineEdit/colors/font_color_uneditable = Color( 0, 0, 0, 1 )
LineEdit/colors/selection_color = Color( 0, 0, 0, 1 )
LineEdit/constants/minimum_spaces = 0
LineEdit/fonts/font = SubResource( 1 )
LineEdit/icons/clear = null
LineEdit/styles/focus = SubResource( 4 )
LineEdit/styles/normal = SubResource( 2 )
LineEdit/styles/read_only = null

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="Theme" id=14]
Button/colors/font_color = Color( 0, 0, 0, 1 )
Button/colors/font_color_disabled = Color( 0, 0, 0, 1 )
Button/colors/font_color_focus = Color( 0, 0, 0, 1 )
Button/colors/font_color_hover = Color( 0, 0, 0, 1 )
Button/colors/font_color_pressed = Color( 0, 0, 0, 1 )
Button/constants/hseparation = 0
Button/fonts/font = null
Button/styles/disabled = SubResource( 9 )
Button/styles/focus = SubResource( 10 )
Button/styles/hover = SubResource( 11 )
Button/styles/normal = SubResource( 15 )
Button/styles/pressed = SubResource( 13 )

[node name="MadLibs" type="Control"]
margin_right = 1280.0
margin_bottom = 854.0
script = ExtResource( 1 )

[node name="CenterContainer4" type="CenterContainer" parent="."]
anchor_top = 0.2
anchor_right = 1.0
anchor_bottom = 0.2

[node name="Prompt" type="Label" parent="CenterContainer4"]
margin_left = 506.0
margin_right = 774.0
margin_bottom = 60.0
theme = SubResource( 7 )
text = "Give me a... "
align = 1
valign = 1

[node name="CenterContainer3" type="CenterContainer" parent="."]
anchor_top = 0.25
anchor_right = 1.0
anchor_bottom = 0.5

[node name="InputText" type="Label" parent="CenterContainer3"]
margin_left = 140.0
margin_top = 66.0
margin_right = 1140.0
margin_bottom = 146.0
rect_min_size = Vector2( 1000, 80 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
text = "Verb ending in \"-ing\""
align = 1
valign = 1

[node name="CenterContainer2" type="CenterContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5

[node name="PlayerText" type="LineEdit" parent="CenterContainer2"]
margin_left = 240.0
margin_right = 1040.0
margin_bottom = 130.0
rect_min_size = Vector2( 800, 130 )
theme = SubResource( 3 )
caret_blink = true
caret_blink_speed = 0.5

[node name="CenterContainer5" type="CenterContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5

[node name="Button" type="Button" parent="CenterContainer5"]
margin_left = 240.0
margin_right = 1040.0
margin_bottom = 130.0
rect_min_size = Vector2( 800, 130 )
theme = SubResource( 14 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_top = 0.6
anchor_right = 1.0
anchor_bottom = 1.0

[node name="NextButton" type="Button" parent="CenterContainer"]
margin_left = 515.0
margin_top = 130.0
margin_right = 765.0
margin_bottom = 210.0
rect_min_size = Vector2( 250, 80 )
rect_pivot_offset = Vector2( 125, 40 )
theme = ExtResource( 4 )
text = "Next"

[connection signal="text_entered" from="CenterContainer2/PlayerText" to="." method="_on_PlayerText_text_entered"]
[connection signal="pressed" from="CenterContainer5/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="CenterContainer/NextButton" to="." method="_on_NextButton_pressed"]
